     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2006x01x12x120335
   * Updated motion.spec. Changing D_FORTIFY_SOURCE=2 by D_FORTIFY_SOURCE=1 to fix
     problem related to building with ffmpeg. (Angel Carpintero)
   * Implemented fix for missed snapshots with slow network cameras (Kenneth Lavrsen)
     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2006x02x07x162149


3.2.4   Formal Release. Summary of changes

Features
   * New text option text_event and new conversion specifier %C. Option
     text_event defines the value %C which then can be used in filenames and
     text_right/text_left. The text_event/%C uses the time stamp for the first
     image detected in a new event. Default value is %Y%m%d%H%M%S. %C is an empty
     string when no event is in progress (gap period expired). Pre_captured
     and minimum_motion_frames images are time stamped before the event happens
     so %C in text_left/right does not have any effect on those images.
   * Added new option track_auto which is a boolean option (on or off)
     with default value off. This enables people to start Motion with auto
     tracking enabled. Changing the config value for track_auto and
     enabling the auto tracking via the httpd track/auto has the exact same
     effect.
   * Added 3 new tracking options: track_step_angle_x, track_step_angle_y,
     and track_move_wait. The options track_step_angle control the movement
     during auto tracking and are currently only active for the pwc type
     tracking. The idea is that they can later also be used for the generic
     tracking as it evolves. The track_move_wait controls the number of frames
     after the camera has moved (auto or manual) during which motion detection
     is disabled. This option should be set so low that the motion detection
     is re-enabled the minute the camera is standing still again.
   * Added new sql_query option. This in combination with convertion